<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/dark_bg"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/logo_circle"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/about_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="38sp"
                        android:paddingTop="20dp"
                        android:gravity="center_horizontal"
                        android:textColor="#fbfbfb"
                        android:text="@string/app_name"
                        fontPath="fonts/title.ttf"
                        android:fontFamily="@font/title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" tools:ignore="MissingPrefix"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="34sp"
                        android:paddingTop="23dp"
                        android:textColor="#fbfbfb"
                        android:text="Music"
                        fontPath="fonts/cursive_2.ttf"
                        android:fontFamily="@font/cursive_2"
                        tools:ignore="MissingPrefix"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:text="@string/info"
                        fontPath="fonts/body_m.ttf"
                        android:textSize="18sp"
                        android:textColor="@color/colorAccent"
                        tools:ignore="MissingPrefix,RtlSymmetry"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.0"
                        android:textColor="#fbfbfb"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/ver"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#80fbfbfb" tools:ignore="RtlSymmetry"/>

                    <TextView
                        android:id="@+id/version_string"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="#fbfbfb"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Flavour"
                        android:textColor="#80fbfbfb"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Aspiring Voice Actor"
                        android:textColor="#fbfbfb"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Codename"
                        android:textColor="#80fbfbfb"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        fontPath="fonts/interbold.otf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:text="@string/authors"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/udit"
                        fontPath="interbold.otf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dev"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="#fbfbfb"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:text="@string/deseg_dev"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#80fbfbfb"
                        tools:ignore="HardcodedText" />


                    <TextView
                        android:id="@+id/himanshu"
                        fontPath="interbold.otf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/graphics_d"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="#fbfbfb"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:text="@string/deseg_gd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#80fbfbfb"
                        tools:ignore="HardcodedText" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="10sp"
                        android:text="@string/product_man"
                        android:textSize="14sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="#B0FBFBFB"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>